--- a/css/style.css
+++ b/css/style.css
@@ -19,10 +19,13 @@ img {
 }
 
 /* section1 */
-/* #section1 {
-  padding: 0 10%;
-} */
 
 .uno {
   height: 120px;
+}
+
+/* section2 */
+
+.due {
+  height: 650px;
 }
