--- a/css/style.css
+++ b/css/style.css
@@ -30,11 +30,21 @@ img {
   height: 650px;
 }
 
+/* section3 */
+
 .treup {
   height: 200px;
 }
 
+/* section4 */
+
+#section4 {
+  padding-left: 15%;
+  padding-right: 15%;
+  background-color: blue;
+}
+
 .tre {
-  height: 150px;
-  width: 300px;
+  height: 200px;
+  /* margin-left: 15px; */
 }
