--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,7 @@ img {
 
 .uno {
   height: 120px;
+  background-color: blue;
 }
 
 /* section2 */
@@ -47,4 +48,18 @@ img {
 
 .tre {
   height: 250px;/
+}
+
+/* section5 */
+
+.cinqueup {
+  height: 250px;
+}
+
+.cinqueside {
+  height: 400px;
+}
+
+.cinquebottom {
+  height: 150px;
 }
