--- a/css/style.css
+++ b/css/style.css
@@ -122,6 +122,7 @@ body {
   /* margin: -2%; */
 }
 
+/* ridimensionamento colonne immagini */
 @media screen and (max-width: 991px) {
   #section4 {
     padding-left: 0%;
@@ -153,12 +154,12 @@ body {
 }
 
 .cinquesidelft {
-  height: 200px;
+  height: 400px;
   font-size: 20px;
 }
 
 .cinquesiderght {
-  height: 200px;
+  height: 400px;
   font-size: 20px;
 }
 
@@ -166,10 +167,87 @@ body {
   height: 150px;
 }
 
-@media screen and (max-width: 991px) {
+/* ridimensionamento colonne immagini */
+@media screen and (min-width: 992px) and (max-width: 1199px) {
+  #section4 {
+    padding-left: 5%;
+    padding-right: 5%;
+    background-color: blue;
+    /* margin: -2%; */
+  }
+}
+
+/* ridimensionamento paragrafi */
+@media screen and (min-width: 1200px) {
+  .cinquesidelft {
+    padding-left: 300px;
+    padding-right: 50px;
+  }
+
+  .cinquesiderght {
+    padding-left: 50px;
+    padding-right: 300px;
+  }
 
 }
 
+@media screen and (min-width: 992px) and (max-width: 1199px) {
+  .cinquesidelft {
+    padding-left: 200px;
+    padding-right: 50px;
+  }
+
+  .cinquesiderght {
+    padding-left: 50px;
+    padding-right: 200px;
+  }
+
+}
+
+@media screen and (min-width: 802px) and (max-width: 991px) {
+  .cinquesidelft {
+    padding-left: 150px;
+    padding-right: 150px;
+  }
+
+  .cinquesiderght {
+    padding-right: 150px;
+    padding-left: 150px;
+  }
+  .cinquesidelft {
+    height: 180px;
+    font-size: 20px;
+  }
+
+  .cinquesiderght {
+    height: 180px;
+    font-size: 20px;
+  }
+
+}
+
+@media screen and (min-width: 0px) and (max-width: 801px) {
+  .cinquesidelft {
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+
+  .cinquesiderght {
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+
+  .cinquesidelft {
+    height: 150px;
+    font-size: 20px;
+  }
+
+  .cinquesiderght {
+    height: 150px;
+    font-size: 20px;
+  }
+
+}
 
 /* section6 */
 
