--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,11 @@ img {
   padding: 2px;
 }
 
+/* .container-fluid {
+  padding-left: 0px;
+  padding-right: 0px;
+} */
+
 body {
   font-family: verdana;
 }
@@ -119,7 +124,6 @@ body {
   padding-left: 13%;
   padding-right: 13%;
   background-color: blue;
-  /* margin: -2%; */
 }
 
 /* ridimensionamento colonne immagini */
@@ -128,7 +132,6 @@ body {
     padding-left: 0%;
     padding-right: 0%;
     background-color: blue;
-    /* margin: -2%; */
   }
 }
 
