--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@ img {
   min-height: 100px;
   background-color: #5ea9be;
   border: solid 1px black;
-  padding: 2px;
+  /* padding: 2px; */
 }
 
 /* .container-fluid {
@@ -37,10 +37,17 @@ body {
   padding-left: 40px;
   padding-right: 40px;
   background-color: darkblue;
+  height: 100px;
 }
 
 #section1 .navbar-default {
-  background-color: green;
+  /* background-color: green; */
+  padding-top: 10px;
+  height: 100px;
+}
+
+.nomargin {
+  margin-bottom: 0px;
 }
 
 #section1 .navbar {
@@ -50,6 +57,8 @@ body {
 #section1 .navbar-brand {
   padding-left: 100px;
   padding-right: 100px;
+  padding-top: 30px;
+  float: left;
 }
 
 /* section2 icona START BOOTSTRAP */
@@ -150,7 +159,7 @@ body {
 }
 
 
-/* section5 */
+/* section5 ABOUT */
 
 .cinqueup {
   height: 250px;
@@ -185,11 +194,13 @@ body {
   .cinquesidelft {
     padding-left: 300px;
     padding-right: 50px;
+    height: 400px;
   }
 
   .cinquesiderght {
     padding-left: 50px;
     padding-right: 300px;
+    height: 400px;
   }
 
 }
@@ -241,15 +252,19 @@ body {
   }
 
   .cinquesidelft {
-    height: 150px;
+    height: 300px;
     font-size: 20px;
   }
 
   .cinquesiderght {
-    height: 150px;
+    height: 300px;
     font-size: 20px;
   }
 
+}
+
+.ms_button {
+  text-align: center;
 }
 
 /* section6 */
