--- a/css/style.css
+++ b/css/style.css
@@ -19,10 +19,10 @@ img {
 }
 
 
-.ms_nopadding {
+/* .ms_nopadding {
   padding-left: 0px;
   padding-right: 0px;
-}
+} */
 
 body {
   font-family: verdana;
@@ -31,13 +31,13 @@ body {
 /* section1 NAV BOOTSTRAP*/
 .uno {
   height: 120px;
-  background-color: blue;
+  background-color: white;
 }
 
 #section1 {
   padding-left: 40px;
   padding-right: 40px;
-  background-color: darkblue;
+  background-color: white;
   height: 100px;
 }
 
@@ -59,7 +59,6 @@ body {
 }
 
 /* section2 icona START BOOTSTRAP */
-
 #section2 {
   background-color: transparent;
 }
@@ -105,7 +104,6 @@ body {
 }
 
 /* section3 PORTFOLIO */
-
 .treup {
   height: 200px;
   padding-top: 70px;
@@ -125,7 +123,6 @@ body {
 }
 
 /* section4 */
-
 #section4 {
   padding-left: 13%;
   padding-right: 13%;
@@ -157,7 +154,6 @@ body {
 
 
 /* section5 ABOUT */
-
 .cinqueup {
   height: 250px;
 }
@@ -265,7 +261,6 @@ body {
 }
 
 /* section6 CONTACT ME */
-
 .seiup {
   height: 150px;
 }
